<?xml version="1.0"?>
<package>
  <name>ros2djs</name>
  <version>0.0.0</version>
  <description>The ros2djs package</description>

  <maintainer email="garaemon@todo.todo">garaemon</maintainer>
  <author email="garaemon@todo.todo">garaemon</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
